--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "twig/twig": "~1.12",
         "widop/http-adapter-bundle": "~1.1.0",
         "willdurand/geocoder": "~2.0",
-        "satooshi/php-coveralls": "~0.6"
+        "satooshi/php-coveralls": "~0.6",
+        "symfony/phpunit-bridge": "^3.1@dev"
     },
     "autoload": {
         "psr-4": { "Ivory\\GoogleMapBundle\\": "" }
