--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.0",
         "symfony/framework-bundle": "~2.8|~3.0",
-        "qsimon/ivory-google-map": "dev-easi-sf3"
+        "egeloen/google-map": "dev-easi-sf3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
